--- a/.gitignore
+++ b/.gitignore
@@ -68,6 +68,10 @@
 # Julia
 !/**/*.jl
 
+######################
+# Including some of the input data which corresponds to important parameters
+!/configs/*.txt
+
 #######################
 # Include some additional file formats in any output folder. You might have
 # to change the name of the Output folder to whatever it is called in your
