adding updated interaction matrix & interactions_wk
created in csv then exported to txt files to avoid small formating issues with csvs.

gitignore also now unignores csvs in the configs folder

--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,7 @@
 ######################
 # Including some of the input data which corresponds to important parameters
 !/configs/*.txt
+!/configs/*.csv
 
 #######################
 # Include some additional file formats in any output folder. You might have
