include yaml and ymls

--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,10 @@
 !/**/*.java
 !/**/*.jar
 
+# Yaml
+!/**/*.yml
+!/**/*.yaml
+
 ######################
 # Including some of the input data which corresponds to important parameters
 !/configs/*.txt
