configs txt. files moves inside data folder

--- a/.gitignore
+++ b/.gitignore
@@ -81,6 +81,8 @@
 !/configs/*.txt
 !/configs/*.csv
 
+!/data/configs/*.txt
+
 #######################
 # Include some additional file formats in any output folder. You might have
 # to change the name of the Output folder to whatever it is called in your
