abstracting the params filenames
new external file which allows user to easily change params from outside of the code

--- a/.gitignore
+++ b/.gitignore
@@ -80,7 +80,7 @@
 # Including some of the input data which corresponds to important parameters
 !/configs/*.txt
 !/configs/*.csv
-
+/dataForSophie/*
 
 !/data/configs/*.txt
 !/data/configs/*.csv
