verification data for checking

--- a/.gitignore
+++ b/.gitignore
@@ -84,7 +84,7 @@
 
 !/data/configs/*.txt
 !/data/configs/*.csv
-
+!/data/verification/*
 #######################
 # Include some additional file formats in any output folder. You might have
 # to change the name of the Output folder to whatever it is called in your
