--- a/.gitignore
+++ b/.gitignore
@@ -85,6 +85,8 @@
 !/data/configs/*.txt
 !/data/configs/*.csv
 !/data/verification/*.txt
+/data/verification/*.csv
+
 #######################
 # Include some additional file formats in any output folder. You might have
 # to change the name of the Output folder to whatever it is called in your
