--- a/.gitignore
+++ b/.gitignore
@@ -85,6 +85,7 @@
 !/data/configs/*.txt
 !/data/configs/*.csv
 !/data/verification/*
+/data/verification/census*
 #######################
 # Include some additional file formats in any output folder. You might have
 # to change the name of the Output folder to whatever it is called in your
