--- a/.gitignore
+++ b/.gitignore
@@ -84,7 +84,7 @@
 
 !/data/configs/*.txt
 !/data/configs/*.csv
-!/data/verification/*
+!/data/verification/*.ipynb
 /data/verification/census*
 #######################
 # Include some additional file formats in any output folder. You might have
