--- a/.gitignore
+++ b/.gitignore
@@ -86,6 +86,7 @@
 !/data/configs/*.csv
 !/data/verification/*.ipynb
 /data/verification/census*
+/data/verification/*
 #######################
 # Include some additional file formats in any output folder. You might have
 # to change the name of the Output folder to whatever it is called in your
