--- a/.gitignore
+++ b/.gitignore
@@ -82,9 +82,12 @@
 !/configs/*.csv
 /dataForSophie/*
 
+
 !/data/configs/*.txt
 !/data/configs/*.csv
-/data/verification/*
+/data/verification/*.txt
+/data/verification/*.csv
+
 #######################
 # Include some additional file formats in any output folder. You might have
 # to change the name of the Output folder to whatever it is called in your
