--- a/.gitignore
+++ b/.gitignore
@@ -84,7 +84,8 @@
 
 !/data/configs/*.txt
 !/data/configs/*.csv
-!/data/verification/*.ipynb
+!/data/verification/*.txt
+!/data/verification/*.csv
 /data/verification/census*
 #######################
 # Include some additional file formats in any output folder. You might have
