--- a/.gitignore
+++ b/.gitignore
@@ -87,9 +87,9 @@ build/*
 
 !/data/configs/*.txt
 !/data/configs/*.csv
-/data/verification/*.txt
-/data/verification/*.csv
-
+!/data/verification/*.txt
+!/data/verification/*.csv
+/data/verification/census*
 #######################
 # Include some additional file formats in any output folder. You might have
 # to change the name of the Output folder to whatever it is called in your
