--- a/.gitignore
+++ b/.gitignore
@@ -89,6 +89,8 @@ build/*
 !/data/verification/*.txt
 !/data/verification/*.csv
 /data/verification/census*
+
+!/Protecs/src/main/resources/*
 #######################
 # Include some additional file formats in any output folder. You might have
 # to change the name of the Output folder to whatever it is called in your
