Managed to get mobility tests to run on both district and ward level

--- a/Protecs/.gitignore
+++ b/Protecs/.gitignore
@@ -5,3 +5,6 @@
 build
 /bin/
 /data/raw/
+
+# Ignore ward level OD matrix
+/Protecs/src/main/resources/ipums_daily_transition_count-ward-pre-lockdown_i5_correct_rounding.csv
