--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,7 @@ Protecs/src/main/resources/abm_092320_5_perc_080222_ver1.csv
 Protecs/src/main/resources/params_national_run.txt
 Protecs/src/main/resources/params_district_run.txt
 Protecs/src/main/resources/params_district_run.txt
+Protecs/src/main/resources/province_OD.csv
+Protecs/src/main/resources/params_province_run.txt
+Protecs/src/main/resources/province_census.csv
+Protecs/src/main/resources/province_line_list.txt
