--- a/Protecs/pom.xml
+++ b/Protecs/pom.xml
@@ -11,28 +11,34 @@
 
 
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <java.version>1.8</java.version>
+<!--    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <java.version>22</java.version>
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
+    -->
+    	<maven.compiler.source>1.8</maven.compiler.source>
+    	<maven.compiler.target>1.8</maven.compiler.target>
+
   </properties>
   
-  <repositories>
-        <repository>
+<!--  <repositories> -->
+<!--        <repository>
           <id>pentaho-public</id>
           <name>Pentaho Public</name>
           <url>https://repo.orl.eng.hitachivantara.com/artifactory/pnt-mvn/</url>
         </repository>
 
+-->
 <!-- 	  <repository>
 	        <id>jitpack.io</id>
 	        <url>https://jitpack.io</url>
 	  </repository>  
  -->        
-  </repositories>
+<!--  </repositories> -->
   
 
   <dependencies>
+	
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -41,63 +47,83 @@
     </dependency>
     
     <dependency>
-	    <groupId>org.locationtech.jts</groupId>
+	    <groupId>com.vividsolutions</groupId>
 	    <artifactId>jts</artifactId>
-	    <version>1.15.1</version>
-	    <type>pom</type>
+	    <version>1.13</version>
 	</dependency>
 	
-	<!-- https://mvnrepository.com/artifact/edu.gmu.cs/mason -->
-<!-- 	<dependency>
-	    <groupId>edu.gmu.cs</groupId>
-	    <artifactId>mason</artifactId>
-	    <version>14.0</version>
-	</dependency>
-	 -->
-	<dependency>
+<!--	<dependency>
 		<groupId>gnujaxp</groupId>
 		<artifactId>gnujaxp</artifactId>
 		<version>1.0.0</version>
 	</dependency>
-		
+	-->	
+	
+
+
 	<dependency>
-		<groupId>uk.ac.ucl</groupId>
-		<artifactId>swise</artifactId>
-		<version>0.1-SNAPSHOT</version>
+		<groupId>eclab</groupId>
+		<artifactId>mason</artifactId>
+		<version>22</version>
+	</dependency>
+	<dependency>
+		<groupId>ucl.ac.uk</groupId>
+		<artifactId>swiselib</artifactId>
+		<version>2023</version>
+	</dependency>
+	<dependency>
+		<groupId>edu.gmu.cs</groupId>
+		<artifactId>geomason</artifactId>
+		<version>1.5</version>
 	</dependency>
   </dependencies>
 
   <build>
     <plugins>
 	    <plugin>
-	        <artifactId>maven-assembly-plugin</artifactId>
-	        <configuration>
-	          <finalName>ServiceCreate</finalName>
-	          <appendAssemblyId>false</appendAssemblyId>
-	          <archive>
-	            <manifest>
-	              <mainClass>uk.ac.ucl.protecs.sim.WorldBankCovid19Sim</mainClass>
-	            </manifest>
-	          </archive>
-	          <descriptorRefs>
-	            <descriptorRef>jar-with-dependencies</descriptorRef>
-	          </descriptorRefs>
-	        </configuration>
+			<groupId>org.apache.maven.plugins</groupId>
+	        <artifactId>maven-shade-plugin</artifactId>
+	        <version>3.5.3</version>
+	        <executions>
+				<execution>
+					<phase>package</phase>
+					<goals>
+						<goal>shade</goal>
+					</goals>
+					<configuration>
+						<transformers>
+							<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+								<mainClass> uk.ac.ucl.protecs.sim.WorldBankCovid19Sim</mainClass>
+							</transformer>
+						</transformers>
+					</configuration>
+					</execution>
+
+	        </executions>
 	      </plugin>
     </plugins>
-    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
-      <plugins>
-        <plugin>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <configuration>
-            <source>${java.version}</source>
-            <target>${java.version}</target>
-          </configuration>
-        </plugin>
 
-		
-
-      </plugins>
-    </pluginManagement>
   </build>
+  
+<!--  <dependencyManagement>
+  	<dependencies>
+  		<dependency>
+  			<groupId>eclab</groupId>
+  			<artifactId>mason</artifactId>
+  			<version>22</version>
+  		</dependency>
+  		<dependency>
+  			<groupId>ucl.ac.uk</groupId>
+  			<artifactId>swiselib</artifactId>
+  			<version>2023</version>
+  		</dependency>
+  		<dependency>
+  			<groupId>edu.gmu.cs</groupId>
+  			<artifactId>geomason</artifactId>
+  			<version>1.5</version>
+  		</dependency>
+  		
+  	</dependencies>
+  </dependencyManagement>
+-->
 </project>
