--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,7 @@ Protecs/src/main/resources/province_OD.csv
 Protecs/src/main/resources/params_province_run.txt
 Protecs/src/main/resources/province_census.csv
 Protecs/src/main/resources/province_line_list.txt
+Protecs/src/main/resources/census_ipums.csv
+Protecs/src/main/resources/census_ipums_5perc.csv
+Protecs/src/main/resources/ipums_radiation_formatted.csv
+
