Edited names of variables for more clarity, edited logging to only output the occupations that appear in the simulation

--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,4 @@ Protecs/src/main/resources/new_census_5perc_multiStatMultiDist.csv
 Protecs/src/main/resources/params_national_run.txt
 Protecs/src/main/resources/params_province_run.txt
 Protecs/src/main/resources/province_census.csv
+Protecs/src/main/resources/census_ipums.csv
