--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,4 @@ Protecs/src/main/resources/census_ipums.csv
 Protecs/src/main/resources/census_ipums_5perc.csv
 Protecs/src/main/resources/ipums_radiation_formatted.csv
 
+Protecs/src/main/resources/ipums_5p_wp_bubbles_comb_teacher_students.csv
