--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,5 @@ Protecs/src/main/resources/new_census_5perc_multiStatMultiDist.csv
 Protecs/src/main/resources/params_national_run.txt
 Protecs/src/main/resources/params_province_run.txt
 Protecs/src/main/resources/province_census.csv
+Protecs/src/main/resources/ipums_5p_wp_bubbles_comb_teacher_students.csv
+Protecs/src/main/resources/census_ipums.csv
