--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,4 @@ Protecs/src/main/resources/province_line_list.txt
 Protecs/src/main/resources/census_ipums_5perc.csv
 Protecs/src/main/resources/ipums_radiation_formatted.csv
 
+Protecs/src/main/java/uk/ac/ucl/protecs/sim/run_myriad_locally.java
