46 disease modularity can be improved (#59)
* Added disease container and store current infections within the container

* Housed infection objects within a hashmap

* found more references to old infection objects

* Set up new quick reporter on infections using modular design

* continued to centralise how we store infections

* Set up dummy behaviour framework

* Set up initial test suit for dummy disease testing

* Infection behaviour now inherits from the same place

* Big ugly commit...

I've been working on modularizing the infection and infectious behaviour stuff. So far it's working. I've updated a lot of the logging to iterate over the infecitons rather than the person objects so that is good, I didn't finish doing the testing and dummy disease stuff so tests are still failing there...

* Fixed how spurious symptoms are created under new format

* fully modularised the infection object

* Neaten up the files

* Future proofed the covid testing

* Added a new variable to the infection objects to track if the illness was the cause of death. Also I caught a bug where spurious symptoms could test positive for Covid. i have also redone the logging to account for the new model structure

* Moved all disease behaviour into the behaviour folder

* More refactoring

* Neaten up imports ready for merging into main

* Update Person.java

* Update create_averaged_out_csvs_from_output.py

* update

* BehaviourFramework to interface edits

* local java version nonsense

* Beginning to remove replace disease type via multiple booleans

* Finished removal of boolean disease categories

* Merge branch '46-disease-modularity-can-be-improved' of https://github.com/dime-worldbank/Disease-Modelling-SSA into 46-disease-modularity-can-be-improved

* refactoring location of files to make navigating the proposed infectious interface/ disease superclass easier

* renamed infectious behaviour framework for a ncd/ cd neutral name

* Rename files for clarity

* renaming

* Moved infec

--- a/Protecs/pom.xml
+++ b/Protecs/pom.xml
@@ -11,13 +11,14 @@
 
 
   <properties>
-<!--    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <java.version>22</java.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+<!--        <java.version>22</java.version>
+
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
     -->
-    	<maven.compiler.source>1.8</maven.compiler.source>
-    	<maven.compiler.target>1.8</maven.compiler.target>
+    	<maven.compiler.source>22</maven.compiler.source>
+    	<maven.compiler.target>22</maven.compiler.target>
 
   </properties>
   
@@ -69,7 +70,7 @@
 	<dependency>
 		<groupId>ucl.ac.uk</groupId>
 		<artifactId>swiselib</artifactId>
-		<version>2023</version>
+		<version>2025</version>
 	</dependency>
 	<dependency>
 		<groupId>edu.gmu.cs</groupId>
