--- a/.gitignore
+++ b/.gitignore
@@ -138,3 +138,4 @@ Protecs/src/main/resources/census_ipums_5perc.csv
 Protecs/src/main/resources/ipums_radiation_formatted.csv
 
 Protecs/src/main/java/uk/ac/ucl/protecs/sim/run_myriad_locally.java
+Protecs/src/main/resources/daily_region_transition_probability-new-district-pre-lockdown_i5.csv
